<resources>
    <string name="app_name">InfoPulse</string>
    <string name="source_author">Source, Author</string>
    <string name="published_date">Published Date</string>
    <string name="content">content</string>
    <string name="title">Title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="source_name">Source Name</string>
    <string name="category">Category</string>
    <string name="country_language">country/language</string>
    <string name="description">Description</string>
    <string name="author">Author</string>
    <string name="see_in_browser">See In Browser</string>
    <string name="save_news">Save News</string>
    <string name="remove_article">Remove Article</string>
    <string name="add_to_favourites">Add To Favourites</string>
    <string name="remove_from_favourites">Remove From Favourites</string>
</resources>