<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/cr_round_corner_layout"
    android:padding="10dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSourceAndAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/source_author"
        android:textColor="@color/black"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="@id/sivArticleImage"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/sivArticleImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:scaleType="center"
        app:shapeAppearanceOverlay="@style/RoundedImages"
        android:src="@drawable/img_no_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSourceAndAuthor" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPublishDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/published_date"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/sivArticleImage"
        app:layout_constraintStart_toEndOf="@id/sivArticleImage"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/content"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/sivArticleImage"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>