<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="8dp"
    android:layout_margin="5dp"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/cr_round_corner_layout">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSourceAndAuthor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/source_author"
            android:textColor="@color/black"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toStartOf="@id/tvPublishDate"
            app:layout_constraintStart_toStartOf="@id/sivArticleImage"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/sivArticleImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="5dp"
            android:scaleType="center"
            android:src="@drawable/img_no_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSourceAndAuthor"
            app:shapeAppearanceOverlay="@style/RoundedImages" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPublishDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/published_date"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/sivArticleImage"
            app:layout_constraintTop_toTopOf="@id/sivArticleImage" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:lines="2"
            android:text="@string/content"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/btnRemoveNews"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/sivArticleImage"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRemoveNews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_article"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sivArticleImage"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>